<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context="com.smartplace.alerta.family.FamilyFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout_list">

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/list_item_family" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/main_family" />
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:listSelector="@drawable/blank_selector"
            android:scrollbars="none"
            android:id="@+id/list_people_items" />
    </LinearLayout>

    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        android:id="@+id/layout_login"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/are_you_ok"
                android:id="@+id/txt_who_am_i" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/login_instructions"
                android:gravity="center"
                android:padding="20dp"
                android:id="@+id/txt_login_instructions" />


            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <com.smartplace.alerta.coverflow.FancyCoverFlow
                        android:id="@+id/fancyCoverFlow"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/txt_user_type"
                        android:layout_gravity="center" />
                </LinearLayout>


            </FrameLayout>
            <com.andreabaccega.widget.FormEditText
                whatever:testType="personFullName"
                whatever:emptyErrorString="@string/empty_field"
                whatever:testErrorString="@string/error_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:id="@+id/edit_name"
                />

            <com.andreabaccega.widget.FormEditText
                whatever:testType="phone"
                whatever:emptyErrorString="@string/empty_field"
                whatever:testErrorString="@string/error_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                android:id="@+id/edit_mobile"
                />


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_family"
                android:textColor="@android:color/white"
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout_no_family"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/header_no_family"
                android:id="@+id/txt_header_no_family" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/no_family_instructions"
                android:gravity="center"
                android:padding="20dp"
                android:id="@+id/txt_no_family_instructions" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_family"
                android:textColor="@android:color/white"
                android:id="@+id/btn_add_familiy"
                android:text="@string/add_family"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>



</FrameLayout>
