<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    tools:context="com.smartplace.alertamx.alertamx.alerts.AlertsConfigActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <TextView
            android:text="@string/header_config_alerts"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:id="@+id/header_states" />
        <View
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:background="@drawable/shadow_card"
            android:layout_height="4dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/layout_states">


        </LinearLayout>

        <TextView
        android:text="@string/notifications"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/header_notifications" />
    <View
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"

        android:background="@drawable/shadow_card"
        android:layout_height="4dp"/>

        <Switch
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/receive_notifications"
            android:id="@+id/sw_notifcations" />
</LinearLayout>
</ScrollView>
